fixing overflow-x

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: var(--secondary-color) !important;
+    overflow-x: hidden;
 }
 
 .backHome {
